force-app/main/default/objects/AIRetrieverResponse__dll/fields/aIRetrieverRequestId__c.field-meta.xml
<CustomField>
    <fullName>aIRetrieverRequestId__c</fullName>
    <label>aIRetrieverRequestId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aIRetrieverRequestId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>