force-app/main/default/objects/AIRetrieverResponse__dll/fields/responseInfoText__c.field-meta.xml
<CustomField>
    <fullName>responseInfoText__c</fullName>
    <label>responseInfoText</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>responseInfoText</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>