force-app/main/default/objects/AIRetrieverResponse__dll/fields/responseTimestamp__c.field-meta.xml
<CustomField>
    <fullName>responseTimestamp__c</fullName>
    <label>responseTimestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>responseTimestamp</externalName>
        <isEventDate>true</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>