force-app/main/default/objects/AIRetrieverResponse__dll/fields/resultText__c.field-meta.xml
<CustomField>
    <fullName>resultText__c</fullName>
    <label>resultText</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>resultText</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>