force-app/main/default/objects/AIRetrieverResponse__dll/fields/scoreNumber__c.field-meta.xml
<CustomField>
    <fullName>scoreNumber__c</fullName>
    <label>scoreNumber</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>scoreNumber</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>