force-app/main/default/objects/AIRetrieverResponse__dll/fields/sourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>sourceRecordId__c</fullName>
    <label>sourceRecordId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>sourceRecordId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>